--- a/less/src/styles/index.less
+++ b/less/src/styles/index.less
@@ -1,39 +1,8 @@
+// imports
 @import "globales.less";
+@import "intro.less";
+@import "articulos.less";
+@import "cajas.less";
 
-.intro {
-	width: 1340px;
-	height: 650px;
-	padding: 10px;
-	margin: 0 auto;
-	position: relative;
-  
-  &__contenido {
-    width: 50%;
-    margin: 0 auto;
-    position: absolute;
-    top: 156px;
-    left: 0;
-    right: 0;
-    text-align: center;
-    color: white;
-  }
-  
-  &__imagen {
-		width: 100%;
-    max-width: 1320px;
-		position: absolute;
-    
-		img {
-			width: 100%;
-			height: 624px;
-      z-index: 1;
-		}
-  }
-  
-  &__categoria {
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    font-size: 50px;
-  }
-    
-}
+
+// variables
