--- a/less/src/templates/article.pug
+++ b/less/src/templates/article.pug
@@ -7,7 +7,7 @@ html
 				span.intro__categoria Noticias
 				h1.intro__titulo Cyberpunk 2077 tiene tres prólogos distintos
 			.intro__autor
-				img(src="https://cdn.glitch.com/4e21050b-5114-48c8-9b69-6537cfc5db8f%2Favatar.jpg?v=1621471552971")
+				img(src="static/avatar.jpg")
 				span.intro__autor-titulo Autor
 				span.intro__autor-nombre John Wick
 		article.articulo--principal
@@ -19,6 +19,6 @@ html
 			p Cyberpunk 2077 se pondrá disponible el 16 de abril de 2020 y se lanzará en versiones para PC, PlayStation 4 y Xbox One.
 			h2 No te Pierdas...
 		section.contenedor--cajas
-			+caja("https://cdn.glitch.com/4e21050b-5114-48c8-9b69-6537cfc5db8f%2Fxbox.jpg?v=1621471562478", "Xbox", "Conoce las actualizaciones de Game Pass", "A una semana terminado el E3, Microsoft anunció la 1era rotación de juegos para Xbox")
-			+caja("https://cdn.glitch.com/4e21050b-5114-48c8-9b69-6537cfc5db8f%2Ffortnite.jpg?v=1621471557671", "Fortnite", "Fortnite une fuerzas con Stranger Things", "Portales hacia el Upside Down han aparecido dentro de Fortnite, y aunque no funcionan igual.")
-			+caja("https://cdn.glitch.com/4e21050b-5114-48c8-9b69-6537cfc5db8f%2Fcuphead.jpg?v=1621471555540", "Cuphead", "Cuphead se atrasa hasta el año 2020", "Los miembros de Studio MDHR revelan la razón detrás del atraso de la fecha de lanzamiento.")
+			+caja("static/xbox.jpg", "Xbox", "Conoce las actualizaciones de Game Pass", "A una semana terminado el E3, Microsoft anunció la 1era rotación de juegos para Xbox")
+			+caja("static/fortnite.jpg", "Fortnite", "Fortnite une fuerzas con Stranger Things", "Portales hacia el Upside Down han aparecido dentro de Fortnite, y aunque no funcionan igual.")
+			+caja("static/cuphead.jpg", "Cuphead", "Cuphead se atrasa hasta el año 2020", "Los miembros de Studio MDHR revelan la razón detrás del atraso de la fecha de lanzamiento.")
