--- a/stylus/src/styles/ejercicio-stylus.styl
+++ b/stylus/src/styles/ejercicio-stylus.styl
@@ -1,21 +1,5 @@
-* 
-	box-sizing: border-box
-
-body
-	margin: 0
-	font-family: 'Lato', sans-serif
-
-.buscador
-	width: 100%
-	height: 250px;
-	padding: 100px;
-	background-image: url("../static/cover.jpg")
-	background-size: cover
-	text-align: center
-	&__input
-		width: 75%
-		height: 60px
-		padding: 20px
-		border: none 
-		border-radius: 30px
-		font-size: 25px
+@import "componentes/globales"
+@import "componentes/buscadores"
+@import "componentes/filtros"
+@import "componentes/cajas"
+@import "componentes/estadisticas"
